--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>navigation</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
-    <forge.api.version>1.0.0.Beta5</forge.api.version>
+    <forge.api.version>1.0.0-SNAPSHOT</forge.api.version>
   </properties>
   <dependencyManagement>
     <dependencies>
